<resources>
    <string name="app_name">Remind Me!</string>
    <string name="TOAST_STRING">Invalid username</string>
    <string name="TOAST_STRING2">User Already Registered</string>
    <string name="TOAST_STRING3">Invalid time</string>
</resources>
