<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBG"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="75dp"
                android:textSize="35dp"
                android:textAlignment="center"
                android:text="Register"
                android:textColor="@color/appFont"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:ems="10"
                android:layout_below="@id/register"
                android:inputType="textPersonName"
                android:textColor="@color/appFont"
                android:hint="Username"
                android:textColorHint="@color/appFont"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/appFont"
                android:hint="Password"
                android:textColorHint="@color/appFont"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText2"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:text="Register"
                android:textColor="@color/appFont"
                android:background="@drawable/shape"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="Already Registered, Click here to Sign In"
                android:textColor="@color/appFont"
                android:gravity="center_horizontal" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>