...
            android:gravity="center"
            android:hint="Date And Time"
            android:textColorHint="@color/appFont"
            android:textColor="@color/appFont"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/selectDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:backgroundTint="@color/appBG"
            android:textColor="@color/appFont"
...
